--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -156,6 +156,7 @@
                 android:text="@string/signup_button"
                 android:textStyle="bold"
                 android:textColor="@color/white"
+                android:onClick="signUp"
                 app:cornerRadius="28dp"
                 app:backgroundTint="@color/primary"
                 app:layout_constraintEnd_toEndOf="parent"
