--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".MainActivity">
+    tools:context=".SignInActivity">
 
     <!-- Background Card for Login Form -->
     <androidx.cardview.widget.CardView
@@ -109,6 +109,7 @@
                 android:text="@string/login_button"
                 android:textStyle="bold"
                 android:textColor="@color/white"
+                android:onClick="signIn"
                 app:cornerRadius="28dp"
                 app:backgroundTint="@color/primary"
                 app:layout_constraintEnd_toEndOf="parent"
