--- a/app/src/main/res/layout/activity_list_wishes.xml
+++ b/app/src/main/res/layout/activity_list_wishes.xml
@@ -16,6 +16,7 @@
       android:textSize="24sp"
       android:textStyle="bold"
       android:textColor="@color/primary"
+      android:paddingBottom="16dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +27,6 @@
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:clipToPadding="false"
-      android:padding="16dp"
       app:layout_constraintTop_toBottomOf="@id/list_title"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
