--- a/app/src/main/res/layout/activity_form_wish.xml
+++ b/app/src/main/res/layout/activity_form_wish.xml
@@ -127,6 +127,29 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- Switch: Status -->
+            <TextView
+                android:id="@+id/status_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/form_status_label"
+                android:textColor="@color/primary"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/priority_spinner"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/status_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/primary"
+                app:thumbTint="@color/primary"
+                app:trackTint="@color/primary_translucent"
+                app:layout_constraintTop_toBottomOf="@id/status_label"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <!-- Save Button -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/save_button"
@@ -139,7 +162,7 @@
                 android:onClick="saveWish"
                 app:backgroundTint="@color/primary"
                 app:cornerRadius="28dp"
-                app:layout_constraintTop_toBottomOf="@id/priority_spinner"
+                app:layout_constraintTop_toBottomOf="@id/status_switch"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -156,7 +179,6 @@
                 app:layout_constraintTop_toBottomOf="@id/save_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
