--- a/app/src/main/res/layout/activity_list_wishes.xml
+++ b/app/src/main/res/layout/activity_list_wishes.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color"
-    tools:context=".ListWishesActivity">
+    android:background="@color/background_color">
 
-  <TextView
-      android:id="@+id/list_title"
-      android:layout_width="wrap_content"
+  <com.google.android.material.tabs.TabLayout
+      android:id="@+id/tab_layout"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:text="@string/list_wishes_title"
-      android:textSize="24sp"
-      android:textStyle="bold"
-      android:textColor="@color/primary"
-      android:paddingBottom="16dp"
+      android:background="@color/white"
+      android:elevation="4dp"
+      app:tabTextColor="@color/primary"
+      app:tabIndicatorColor="@color/primary"
+      app:tabIndicatorHeight="4dp"
+      app:tabMode="fixed"
+      app:tabGravity="fill"
+      app:tabRippleColor="@android:color/transparent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      android:layout_marginTop="32dp" />
+      app:layout_constraintEnd_toEndOf="parent"/>
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/wishlist_recycler"
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:clipToPadding="false"
-      app:layout_constraintTop_toBottomOf="@id/list_title"
+      android:layout_marginTop="16dp"
+      app:layout_constraintTop_toBottomOf="@id/tab_layout"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />
