--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#E0E0E0</color>
+    <color name="darker_gray">#BDBDBD</color>
     <color name="primary">#4BC7D8</color>
     <color name="text_color">#1A1A1A</color>
     <color name="hint_text_color">#999999</color>
@@ -9,4 +11,5 @@
     <color name="priority_low">#43A047</color>
     <color name="priority_medium">#FBC02D</color>
     <color name="priority_high">#DC3545</color>
+    <color name="primary_translucent">#331970D2</color>
 </resources>
