--- a/app/src/main/res/drawable/ic_check_line.xml
+++ b/app/src/main/res/drawable/ic_check_line.xml
@@ -1,27 +1,27 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="28dp"
+    android:height="28dp"
+    android:viewportWidth="28"
+    android:viewportHeight="28">
   <path
-      android:pathData="M15,3H21V9"
+      android:pathData="M22,4L11,15"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#6682F3"
+      android:strokeColor="#7DB57F"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M10,14L21,3"
+      android:pathData="M23,19H5"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#6682F3"
+      android:strokeColor="#7DB57F"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M18,13V19C18,19.53 17.789,20.039 17.414,20.414C17.039,20.789 16.53,21 16,21H5C4.47,21 3.961,20.789 3.586,20.414C3.211,20.039 3,19.53 3,19V8C3,7.47 3.211,6.961 3.586,6.586C3.961,6.211 4.47,6 5,6H11"
+      android:pathData="M11,15L6,10"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#6682F3"
+      android:strokeColor="#7DB57F"
       android:strokeLineCap="round"/>
 </vector>
