--- a/app/src/main/res/layout/activity_list_wishes.xml
+++ b/app/src/main/res/layout/activity_list_wishes.xml
@@ -34,6 +34,20 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />
 
+  <TextView
+      android:id="@+id/empty_list_message"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/empty_wish_list_message"
+      android:textSize="16sp"
+      android:textColor="@color/hint_text_color"
+      android:visibility="gone"
+      android:layout_gravity="center"
+      app:layout_constraintTop_toBottomOf="@id/tab_layout"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent" />
+
   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/fab_add"
       android:layout_width="wrap_content"
