--- a/app/src/main/res/layout/item_wish.xml
+++ b/app/src/main/res/layout/item_wish.xml
@@ -26,7 +26,7 @@
             android:textColor="@color/primary"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/img_link"
+            app:layout_constraintEnd_toStartOf="@id/img_complete"
             app:layout_constraintBottom_toTopOf="@id/txt_wish_description"
             android:layout_marginEnd="8dp" />
 
@@ -77,13 +77,24 @@
             android:layout_marginTop="2dp" />
 
         <ImageView
+            android:id="@+id/img_complete"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_check"
+            android:contentDescription="Marcar como concluído"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_chainStyle="spread" />
+
+        <ImageView
             android:id="@+id/img_link"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_link"
             android:contentDescription="Abrir link"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/img_complete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/img_delete" />
 
         <ImageView
             android:id="@+id/img_delete"
@@ -92,8 +103,7 @@
             android:src="@drawable/ic_delete"
             android:contentDescription="Deletar desejo"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="4dp" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
