--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="text_color">#1A1A1A</color>
     <color name="hint_text_color">#999999</color>
     <color name="background_color">#F5F7FA</color>
-    <color name="priority_low">#43A047</color>
+    <color name="priority_low">#7DB57F</color>
     <color name="priority_medium">#FBC02D</color>
     <color name="priority_high">#DC3545</color>
     <color name="primary_translucent">#331970D2</color>
