--- a/app/src/main/res/layout/activity_list_wishes.xml
+++ b/app/src/main/res/layout/activity_list_wishes.xml
@@ -49,6 +49,20 @@
       app:layout_constraintEnd_toEndOf="parent" />
 
   <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:id="@+id/fab_share"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:contentDescription="@string/share_wishlist"
+      android:src="@drawable/ic_share"
+      android:onClick="shareWishlist"
+      app:backgroundTint="@color/primary"
+      app:tint="@color/white"
+      app:layout_constraintBottom_toTopOf="@id/fab_add"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginEnd="24dp"
+      android:layout_marginBottom="16dp"/>
+
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/fab_add"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
